--- a/src/Faithlife.Data/Faithlife.Data.csproj
+++ b/src/Faithlife.Data/Faithlife.Data.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <VersionPrefix>0.1.0</VersionPrefix>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Description>ProjectName class library.</Description>
+    <Description>Faithlife.Data class library.</Description>
     <PackageTags></PackageTags>
   </PropertyGroup>
 
