--- a/src/Faithlife.Data/Faithlife.Data.csproj
+++ b/src/Faithlife.Data/Faithlife.Data.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
     <Description>Faithlife.Data class library.</Description>
     <PackageTags></PackageTags>
     <IsPackable>true</IsPackable>
