--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <VersionPrefix>0.100.1</VersionPrefix>
     <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <NoWarn>$(NoWarn);1998</NoWarn>
     <DebugType>portable</DebugType>
