--- a/src/Faithlife.Data/Faithlife.Data.csproj
+++ b/src/Faithlife.Data/Faithlife.Data.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
-    <Description>Faithlife.Data class library.</Description>
-    <PackageTags></PackageTags>
+    <Description>Helpers for querying ADO.NET-compatible databases.</Description>
+    <PackageTags>ado.net sql database orm</PackageTags>
     <IsPackable>true</IsPackable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Faithlife.Reflection" Version="0.2.0" />
+    <PackageReference Include="Faithlife.Reflection" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
