--- a/.editorconfig
+++ b/.editorconfig
@@ -78,6 +78,12 @@ csharp_style_var_for_built_in_types = true : suggestion
 csharp_style_var_when_type_is_apparent = true : suggestion
 csharp_using_directive_placement = outside_namespace : suggestion
 dotnet_code_quality_unused_parameters = all : suggestion
+dotnet_diagnostic.CA1062.severity = none
+dotnet_diagnostic.CA1063.severity = none
+dotnet_diagnostic.CA1303.severity = none
+dotnet_diagnostic.CA1815.severity = none
+dotnet_diagnostic.CA1826.severity = none
+dotnet_diagnostic.CA2000.severity = none
 dotnet_diagnostic.SA0001.severity = none
 dotnet_diagnostic.SA1003.severity = none
 dotnet_diagnostic.SA1008.severity = none
@@ -115,7 +121,7 @@ dotnet_diagnostic.SA1623.severity = none
 dotnet_diagnostic.SA1633.severity = none
 dotnet_diagnostic.SA1642.severity = none
 dotnet_diagnostic.SA1643.severity = none
-dotnet_diagnostic.SX1101.severity = error
+dotnet_diagnostic.SX1101.severity = warning
 dotnet_naming_rule.local_functions_rule.severity = warning
 dotnet_naming_rule.local_functions_rule.style = upper_camel_case_style
 dotnet_naming_rule.local_functions_rule.symbols = local_functions_symbols
