stylecop.json isn't worth the trouble.

--- a/.editorconfig
+++ b/.editorconfig
@@ -90,12 +90,14 @@ dotnet_diagnostic.SA1008.severity = none
 dotnet_diagnostic.SA1009.severity = none
 dotnet_diagnostic.SA1011.severity = none
 dotnet_diagnostic.SA1013.severity = none
+dotnet_diagnostic.SA1027.severity = none
 dotnet_diagnostic.SA1101.severity = none
 dotnet_diagnostic.SA1116.severity = none
 dotnet_diagnostic.SA1117.severity = none
 dotnet_diagnostic.SA1122.severity = none
 dotnet_diagnostic.SA1133.severity = none
 dotnet_diagnostic.SA1134.severity = none
+dotnet_diagnostic.SA1200.severity = none
 dotnet_diagnostic.SA1201.severity = none
 dotnet_diagnostic.SA1202.severity = none
 dotnet_diagnostic.SA1203.severity = none
