--- a/.editorconfig
+++ b/.editorconfig
@@ -82,6 +82,7 @@ dotnet_diagnostic.CA1062.severity = none
 dotnet_diagnostic.CA1063.severity = none
 dotnet_diagnostic.CA1303.severity = none
 dotnet_diagnostic.CA1815.severity = none
+dotnet_diagnostic.CA1816.severity = none
 dotnet_diagnostic.CA1826.severity = none
 dotnet_diagnostic.CA2000.severity = none
 dotnet_diagnostic.SA0001.severity = none
@@ -186,3 +187,19 @@ dotnet_style_qualification_for_method = false : warning
 dotnet_style_qualification_for_property = false : warning
 dotnet_style_readonly_field = true : suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members : warning
+resharper_access_to_disposed_closure_highlighting = none
+resharper_access_to_modified_closure_highlighting = none
+resharper_arrange_constructor_or_destructor_body_highlighting = hint
+resharper_arrange_method_or_operator_body_highlighting = hint
+resharper_blank_lines_after_block_statements = 0
+resharper_blank_lines_after_block_statements = 0
+resharper_comment_typo_highlighting = none
+resharper_csharp_keep_existing_arrangement = true
+resharper_csharp_new_line_before_while = true
+resharper_csharp_trailing_comma_in_multiline_lists = true
+resharper_csharp_wrap_lines = false
+resharper_identifier_typo_highlighting = none
+resharper_space_within_single_line_array_initializer_braces = true
+resharper_string_literal_typo_highlighting = none
+resharper_unused_member_global_highlighting = none
+resharper_unused_member_local_highlighting = suggestion
