--- a/.editorconfig
+++ b/.editorconfig
@@ -199,6 +199,7 @@ resharper_csharp_new_line_before_while = true
 resharper_csharp_trailing_comma_in_multiline_lists = true
 resharper_csharp_wrap_lines = false
 resharper_identifier_typo_highlighting = none
+resharper_invert_if_highlighting = none
 resharper_space_within_single_line_array_initializer_braces = true
 resharper_string_literal_typo_highlighting = none
 resharper_unused_member_global_highlighting = none
