--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ csharp_indent_braces = false
 csharp_indent_case_contents = true
 csharp_indent_case_contents_when_block = false
 csharp_indent_labels = one_less_than_current
-csharp_indent_switch_labels = false
+csharp_indent_switch_labels = true
 csharp_new_line_before_catch = true
 csharp_new_line_before_else = true
 csharp_new_line_before_finally = true
@@ -76,15 +76,28 @@ csharp_style_unused_value_expression_statement_preference = discard_variable : s
 csharp_style_var_elsewhere = true : suggestion
 csharp_style_var_for_built_in_types = true : suggestion
 csharp_style_var_when_type_is_apparent = true : suggestion
-csharp_using_directive_placement = outside_namespace : suggestion
+csharp_using_directive_placement = outside_namespace : warning
 dotnet_code_quality_unused_parameters = all : suggestion
-dotnet_diagnostic.CA1062.severity = none
+dotnet_diagnostic.CA1031.severity = suggestion
+dotnet_diagnostic.CA1032.severity = suggestion
+dotnet_diagnostic.CA1054.severity = none
+dotnet_diagnostic.CA1055.severity = none
+dotnet_diagnostic.CA1056.severity = none
+dotnet_diagnostic.CA1062.severity = suggestion
 dotnet_diagnostic.CA1063.severity = none
 dotnet_diagnostic.CA1303.severity = none
-dotnet_diagnostic.CA1815.severity = none
+dotnet_diagnostic.CA1308.severity = suggestion
+dotnet_diagnostic.CA1707.severity = none
+dotnet_diagnostic.CA1720.severity = suggestion
+dotnet_diagnostic.CA1812.severity = none
+dotnet_diagnostic.CA1815.severity = suggestion
 dotnet_diagnostic.CA1816.severity = none
-dotnet_diagnostic.CA1826.severity = none
+dotnet_diagnostic.CA1819.severity = suggestion
+dotnet_diagnostic.CA1822.severity = suggestion
+dotnet_diagnostic.CA1826.severity = suggestion
 dotnet_diagnostic.CA2000.severity = none
+dotnet_diagnostic.CA2227.severity = none
+dotnet_diagnostic.CA2237.severity = none
 dotnet_diagnostic.SA0001.severity = none
 dotnet_diagnostic.SA1003.severity = none
 dotnet_diagnostic.SA1008.severity = none
@@ -95,6 +108,7 @@ dotnet_diagnostic.SA1027.severity = none
 dotnet_diagnostic.SA1101.severity = none
 dotnet_diagnostic.SA1116.severity = none
 dotnet_diagnostic.SA1117.severity = none
+dotnet_diagnostic.SA1118.severity = none
 dotnet_diagnostic.SA1122.severity = none
 dotnet_diagnostic.SA1133.severity = none
 dotnet_diagnostic.SA1134.severity = none
@@ -103,12 +117,17 @@ dotnet_diagnostic.SA1201.severity = none
 dotnet_diagnostic.SA1202.severity = none
 dotnet_diagnostic.SA1203.severity = none
 dotnet_diagnostic.SA1204.severity = none
+dotnet_diagnostic.SA1206.severity = none
+dotnet_diagnostic.SA1214.severity = suggestion
+dotnet_diagnostic.SA1300.severity = none
 dotnet_diagnostic.SA1303.severity = none
 dotnet_diagnostic.SA1308.severity = none
 dotnet_diagnostic.SA1310.severity = none
 dotnet_diagnostic.SA1311.severity = none
 dotnet_diagnostic.SA1407.severity = none
+dotnet_diagnostic.SA1408.severity = none
 dotnet_diagnostic.SA1503.severity = none
+dotnet_diagnostic.SA1504.severity = none
 dotnet_diagnostic.SA1513.severity = none
 dotnet_diagnostic.SA1516.severity = none
 dotnet_diagnostic.SA1600.severity = none
@@ -121,6 +140,7 @@ dotnet_diagnostic.SA1615.severity = none
 dotnet_diagnostic.SA1618.severity = none
 dotnet_diagnostic.SA1619.severity = none
 dotnet_diagnostic.SA1623.severity = none
+dotnet_diagnostic.SA1629.severity = none
 dotnet_diagnostic.SA1633.severity = none
 dotnet_diagnostic.SA1642.severity = none
 dotnet_diagnostic.SA1643.severity = none
@@ -159,7 +179,7 @@ dotnet_naming_symbols.private_static_fields_symbols.applicable_kinds = field
 dotnet_naming_symbols.private_static_fields_symbols.required_modifiers = static
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_accessibilities = private
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_kinds = field
-dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static,readonly
+dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static, readonly
 dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = true
 dotnet_style_coalesce_expression = true : warning
@@ -167,10 +187,10 @@ dotnet_style_collection_initializer = true : suggestion
 dotnet_style_explicit_tuple_names = true : warning
 dotnet_style_null_propagation = true : suggestion
 dotnet_style_object_initializer = true : suggestion
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary : none
-dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary : none
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary : none
-dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary : none
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity : none
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity : none
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary : suggestion
+dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary : suggestion
 dotnet_style_predefined_type_for_locals_parameters_members = true : warning
 dotnet_style_predefined_type_for_member_access = true : warning
 dotnet_style_prefer_auto_properties = true : suggestion
@@ -180,27 +200,59 @@ dotnet_style_prefer_conditional_expression_over_return = true : suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true : suggestion
 dotnet_style_prefer_inferred_tuple_names = true : suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true : suggestion
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true : suggestion
 dotnet_style_qualification_for_event = false : warning
 dotnet_style_qualification_for_field = false : warning
 dotnet_style_qualification_for_method = false : warning
 dotnet_style_qualification_for_property = false : warning
-dotnet_style_readonly_field = true : suggestion
+dotnet_style_readonly_field = true : warning
 dotnet_style_require_accessibility_modifiers = for_non_interface_members : warning
 resharper_access_to_disposed_closure_highlighting = none
 resharper_access_to_modified_closure_highlighting = none
+resharper_apply_auto_detected_rules = false
 resharper_arrange_constructor_or_destructor_body_highlighting = hint
 resharper_arrange_method_or_operator_body_highlighting = hint
-resharper_blank_lines_after_block_statements = 0
-resharper_blank_lines_after_block_statements = 0
+resharper_arrange_missing_parentheses_highlighting = hint
+resharper_arrange_trailing_comma_in_multiline_lists_highlighting = warning
 resharper_comment_typo_highlighting = none
+resharper_compare_of_floats_by_equality_operator_highlighting = suggestion
+resharper_csharp_align_first_arg_by_paren = false
+resharper_csharp_align_linq_query = false
+resharper_csharp_align_multiline_argument = false
+resharper_csharp_align_multiline_array_and_object_initializer = false
+resharper_csharp_align_multiline_binary_expressions_chain = false
+resharper_csharp_align_multiline_calls_chain = false
+resharper_csharp_align_multiline_expression = false
+resharper_csharp_align_multiline_extends_list = false
+resharper_csharp_align_multiline_for_stmt = false
+resharper_csharp_align_multiline_parameter = false
+resharper_csharp_align_multiline_switch_expression = false
+resharper_csharp_align_multiple_declaration = false
+resharper_csharp_align_multline_type_parameter_constrains = false
+resharper_csharp_align_multline_type_parameter_list = false
+resharper_csharp_align_tuple_components = false
+resharper_csharp_blank_lines_after_block_statements = 0
+resharper_csharp_indent_anonymous_method_block = false
+resharper_csharp_indent_nested_for_stmt = true
+resharper_csharp_indent_nested_foreach_stmt = true
+resharper_csharp_indent_nested_while_stmt = true
+resharper_csharp_int_align = false
 resharper_csharp_keep_existing_arrangement = true
+resharper_csharp_nested_ternary_style = simple_wrap
 resharper_csharp_new_line_before_while = true
+resharper_csharp_parentheses_group_non_obvious_operations = conditional
+resharper_csharp_parentheses_non_obvious_operations = shift, bitwise
+resharper_csharp_parentheses_redundancy_style = remove_if_not_clarifies_precedence
+resharper_csharp_space_within_single_line_array_initializer_braces = true
 resharper_csharp_trailing_comma_in_multiline_lists = true
+resharper_csharp_wrap_before_ternary_opsigns = true
 resharper_csharp_wrap_lines = false
+resharper_csharp_wrap_ternary_expr_style = wrap_if_long
 resharper_identifier_typo_highlighting = none
 resharper_invert_if_highlighting = none
-resharper_space_within_single_line_array_initializer_braces = true
+resharper_is_expression_always_true_highlighting = hint
+resharper_pattern_always_of_type_highlighting = none
 resharper_string_literal_typo_highlighting = none
+resharper_unused_auto_property_accessor_global_highlighting = none
+resharper_unused_auto_property_accessor_local_highlighting = suggestion
 resharper_unused_member_global_highlighting = none
 resharper_unused_member_local_highlighting = suggestion
