--- a/src/Faithlife.Data/Faithlife.Data.csproj
+++ b/src/Faithlife.Data/Faithlife.Data.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Faithlife.Reflection" Version="1.0.1" />
+    <PackageReference Include="Faithlife.Utility" Version="0.10.1" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
