Use csproj for InternalsVisibleTo.

--- a/src/Faithlife.Data/Faithlife.Data.csproj
+++ b/src/Faithlife.Data/Faithlife.Data.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>Faithlife.Data.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
