--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,8 @@
 <Project>
 
   <PropertyGroup>
-    <VersionPrefix>1.20.1</VersionPrefix>
+    <VersionPrefix>1.21.0</VersionPrefix>
+    <VersionSuffix>beta.1</VersionSuffix>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
