--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,12 +20,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, macos-latest]
     steps:
-    - name: Install .NET
-      uses: actions/setup-dotnet@v4
     - name: Check out code
       uses: actions/checkout@v4
+    - name: Install .NET
+      uses: actions/setup-dotnet@v4
     - name: Restore
       run: .\build.ps1 restore
     - name: Build
